# CARDUI

./: .gitignore  LICENSE  README.md  junk.py  requirements.txt  setup.cfg
.github/workflows/: publish.yml
docs/: all_settings_call.py  full_pregnant_prompt_example.txt
src/CARDUI/: __init__.py
src/CARDUI/batcher/: __init__.py  batcher.py  static.py
src/CARDUI/batcher/classes/: machina.py  structura.py  utilitas.py  vectura.py
src/CARDUI/safe_call/: __init__.py  safe_call.py
src/cardui/: __init__.py
src/cardui/batcher/classes/: machina.py  structura.py
tests/: test_batcher.py  test_batcher_backoff.py  test_machina.py  test_safe_call.py
