[metadata]
name = cardui
version = 0.1.2
description = LLM helper tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Sodi Kroehler
author_email = sodi.kroehler@gmail.com
license = MIT

project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg

[options]
packages = find:
package_dir =
    = src
install_requires =
    openai
python_requires = >=3.6

[options.packages.find]
where = src
