[metadata]
name = cardui
version = 0.1.14
description = LLM helper tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Sodi Kroehler
author_email = sodi.kroehler@gmail.com
license = MIT

project_urls =
    Bug Tracker = https://www.youtube.com/watch?v=dQw4w9WgXcQ
    repository = https://github.com/SodiKroehler/CARDUI

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    rapidfuzz
    tqdm
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    openai
    mistralai
    google-genai
    anthropic